# NSSC_RoboRTS

./: .gitignore
common/: log.h
modules/decision/: CMakeLists.txt
modules/decision/ICRA_decision/: goal_factory.h  sim_decision_node.cpp
modules/driver/camera/config/: camera_param.prototxt
modules/perception/detection/armor_detection/constraint_set/: constraint_set.cpp
modules/perception/detection/armor_detection/constraint_set/config/: constraint_set.prototxt
modules/perception/detection/color_detection/: color_detection_node.cpp
modules/perception/detection/color_detection/config/: color_detection.prototxt
modules/perception/detection/util/: cv_toolbox.h
modules/perception/localization/: localization_node.cpp
modules/perception/localization/config/: localization.prototxt
modules/perception/map/costmap/: costmap_interface.cpp  costmap_interface.h  obstacle_layer.cpp
modules/perception/map/costmap/config/: obstacle_layer_config.prototxt
modules/planning/global_planner/: global_planner_node.cpp
modules/planning/global_planner/a_star_planner/: a_star_planner.cpp
roborts_base/chassis/: chassis.cpp
roborts_base/gimbal/: gimbal.cpp
roborts_base/referee_system/: referee_system.cpp
roborts_base/roborts_sdk/protocol/: protocol_define.h
roborts_bringup/launch/: roborts.launch  roborts_stage.launch
roborts_bringup/worlds/: icra2019.world
roborts_camera/: CMakeLists.txt  camera_node.h
roborts_camera/mercure/: CMakeLists.txt  mercure_driver.cpp  mercure_driver.h
roborts_camera/mercure/proto/: camera.proto
roborts_costmap/include/costmap/: static_layer.h
roborts_costmap/src/: static_layer.cpp
roborts_costmap_converter/: CMakeLists.txt  README.md  package.xml  plugins.xml
roborts_costmap_converter/cfg/dynamic_reconfigure/: CostmapToDynamicObstacles.cfg
roborts_costmap_converter/include/costmap_converter/: costmap_converter_interface.h
roborts_costmap_converter/include/costmap_converter/costmap_to_dynamic_obstacles/: costmap_to_dynamic_obstacles.h
roborts_costmap_converter/src/: costmap_converter_node.cpp
roborts_costmap_converter/src/costmap_to_dynamic_obstacles/: costmap_to_dynamic_obstacles.cpp
roborts_decision/: CMakeLists.txt  behavior_test.cpp  decision.prototxt  decision_node.cpp  log.h
roborts_decision/behavior_action/: buff_action.h  chase_action.h  escape_action.h  gain_buff_action.h  goal_factory.h  patrol_action.h  search_action.h  shoot_action.h  turn_detected_action.h  turn_wounded_action.h  wait_action.h  whirl_action.h
roborts_decision/blackboard/: blackboard.h  shared_blackboard.h
roborts_decision/config/: decision.prototxt
roborts_decision/executor/: chassis_executor.h  gimbal_executor.cpp  gimbal_executor.h
roborts_initialization/: CMakeLists.txt  package.xml
roborts_initialization/include/initialization/: initialization.h
roborts_initialization/src/: initialization.cpp  initialization_node.cpp  laser2map_node.cpp
roborts_localization/: localization_math.h  localization_node.cpp  localization_node.h
roborts_localization/amcl/: amcl.cpp
roborts_localization/amcl/particle_filter/: particle_filter.cpp
roborts_localization/amcl/sensors/: sensor_laser.cpp  sensor_odom.cpp
roborts_msgs/: CMakeLists.txt
roborts_msgs/msg/: ObstacleArrayMsg.msg
roborts_planning/local_planner/timed_elastic_band/src/: teb_local_planner.cpp
tools/launch/: mapping_gazebo.launch  navigation_gazebo.launch  navigation_multi_gazebo.launch  navigation_multi_stage.launch  navigation_stage.launch
tools/maps/: icra2019.pgm  icra2019.yaml  icra20190.pgm  icra2019l.pgm
tools/rviz/: rm_mulit.rviz
tools/worlds/: icra2019.world
